--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,9 @@
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #1C1C1E;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -18,8 +16,36 @@ body {
   display: flex;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #1C1C1E;
+  color: #fff;
 }
 
 li {
   background-color: #333333;
+}
+
+/* Світла тема */
+@media (prefers-color-scheme: light) {
+  :root {
+    background-color: #fff;
+    color: #333;
+  }
+
+  body {
+    background-color: #fff;
+    color: #333;
+  }
+}
+
+/* Темна тема */
+@media (prefers-color-scheme: dark) {
+  :root {
+    background-color: #1C1C1E;
+    color: rgba(255, 255, 255, 0.87);
+  }
+
+  body {
+    background-color: #1C1C1E;
+    color: rgba(255, 255, 255, 0.87);
+  }
 }
