--- a/src/pages/MoviesPage/MoviesPage.module.css
+++ b/src/pages/MoviesPage/MoviesPage.module.css
@@ -31,7 +31,7 @@
     font-size: 16px;
     font-weight: 600;
     color: #ffffff;
-    background-color: #007bff;
+    background-color: #ffc800;
     border: none;
     border-radius: 8px;
     cursor: pointer;
