--- a/src/pages/NotFoundPage/NotFoundPage.module.css
+++ b/src/pages/NotFoundPage/NotFoundPage.module.css
@@ -2,5 +2,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: black;
+    height: 100vh;
+    text-align: center;
+    color: white;
+    font-size: 24px;
+    font-weight: bold;
+    background: linear-gradient(135deg, #1c1c1c, #333333);
 }
